apps/dawarich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dawarich
  namespace: dawarich
spec:
  selector:
    app: dawarich
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: dawarich-postgres
  namespace: dawarich
spec:
  selector:
    app: dawarich-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: dawarich-broker
  namespace: dawarich
spec:
  selector:
    app: dawarich-broker
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
