apps/dawarich/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dawarich
  namespace: traefik
spec:
  entryPoints:
    - frp
  routes:
    - match: Host(`timeline.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: frp-headers
          namespace: traefik
      services:
        - name: dawarich
          port: 3000
          namespace: dawarich
